# specs/swagger.yaml
@@ -15,6 +15,18 @@ paths:
           description: The Diagnostic code of acts.
           required: true
           type: string
+        - name: start
+          in: query
+          description: The start index of acts.
+          type: integer
+        - name: size
+          in: query
+          description: The number of item of acts.
+          type: integer
+        - name: filters
+          in: query
+          description: The filter keywords of acts.
+          type: string
       responses:
         '200':
           description: Success
@@ -141,16 +153,16 @@ definitions:
           type: object
         example:
           - code: A-112
-            name: 'Act Code 112'
-            desc: 'Medical act 112 of D-143'
+            name: Act Code 112
+            desc: Medical act 112 of D-143
             refs: ''
           - code: A-113
-            name: 'Act Code 113'
-            desc: 'Medical act 113 of D-143'
+            name: Act Code 113
+            desc: Medical act 113 of D-143
             refs: ''
           - code: A-114
-            name: 'Act Code 114'
-            desc: 'Medical act 114 of D-143'
+            name: Act Code 114
+            desc: Medical act 114 of D-143
             refs: ''
   GHMResponse:
     properties:
@@ -160,15 +172,15 @@ definitions:
         example: Seasen d aphérèse sanguine (D-054)
       serv:
         type: string
-        description: The severity (1,2..A,B,C) of GHM 28Z16
+        description: 'The severity (1,2..A,B,C) of GHM 28Z16'
         example: 1
       flag:
         type: string
-        description: The flag set (J,T) of GHM 28Z16
+        description: 'The flag set (J,T) of GHM 28Z16'
         example: J
       desc:
         type: string
-        description: The description of GHM
+        description: The description of GHM 28Z16
         example: The GHM code of CMD-28
       refs:
         type: string
